--- a/RecrutingAssistant/AddDealWindow.xaml
+++ b/RecrutingAssistant/AddDealWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RecrutingAssistantApp"
         mc:Ignorable="d"
-        Title="Сделки" Height="200" Width="285" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Сделки" Height="200" Width="293" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="140"/>
@@ -20,13 +20,13 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Label Content="Соискатель" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="100" Grid.Column="0" Grid.Row="0"/>
-        <ComboBox Name="cbSeeker" HorizontalAlignment="Stretch" VerticalAlignment="Center"  Width="122" Grid.Column="1" Grid.Row="0" ItemsSource="{Binding}" DisplayMemberPath="FullName"/>
+        <ComboBox Name="cbSeeker" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="120" Grid.Column="1" Grid.Row="0" ItemsSource="{Binding}" DisplayMemberPath="FullName"/>
         <Label Content="Вакансия" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="1" Width="100" VerticalAlignment="Center"/>
-        <ComboBox Name="cbPosition" HorizontalAlignment="Stretch" VerticalAlignment="Center"  Width="122" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding}" DisplayMemberPath="PositionName"/>
+        <ComboBox Name="cbPosition" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="120" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding}" DisplayMemberPath="PositionName"/>
         <Label Content="Дата сделки" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="2" Width="100" VerticalAlignment="Center"/>
-        <DatePicker Name="dpDateOfDeal" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" Width="122" VerticalAlignment="Stretch" Margin="0,3,0,3"/>
+        <DatePicker Name="dpDateOfDeal" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" Width="120" VerticalAlignment="Center" />
         <Label Content="Комиссионные" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="3" Width="100" VerticalAlignment="Center"/>
-        <TextBox Name="tbCommissions" Grid.Row="3" Grid.Column="1" Width="122" Margin="0,3,0,3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <TextBox Name="tbCommissions" Grid.Row="3" Grid.Column="1" Width="120" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Label Content="" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="4" VerticalAlignment="Center" Height="20"/>
         <Button Name="btnSave" Content="Сохранить" HorizontalAlignment="Center"  VerticalAlignment="Center" Width="120" Grid.Column="0" Grid.Row="5" Click="btnSave_Click"/>
         <Button Name="btnCancel" Content="Отмена" HorizontalAlignment="Center"  VerticalAlignment="Center" Width="120" Grid.Column="1" Grid.Row="5" Click="btnCancel_Click"/>
