--- a/RecrutingAssistant/AddDealWindow.xaml
+++ b/RecrutingAssistant/AddDealWindow.xaml
@@ -22,7 +22,7 @@
         <Label Content="Соискатель" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="100" Grid.Column="0" Grid.Row="0"/>
         <ComboBox Name="cbSeeker" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="120" Grid.Column="1" Grid.Row="0" ItemsSource="{Binding}" DisplayMemberPath="FullName"/>
         <Label Content="Вакансия" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="1" Width="100" VerticalAlignment="Center"/>
-        <ComboBox Name="cbPosition" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="120" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding}" DisplayMemberPath="PositionName"/>
+        <ComboBox Name="cbPosition" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="120" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding}" DisplayMemberPath="FullPosition"/>
         <Label Content="Дата сделки" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="2" Width="100" VerticalAlignment="Center"/>
         <DatePicker Name="dpDateOfDeal" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" Width="120" VerticalAlignment="Center" />
         <Label Content="Комиссионные" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="3" Width="100" VerticalAlignment="Center"/>
